--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -3,10 +3,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 80vw;
 }
 
 .progressNumber-container{
-    width: 60vw;
+    width: 80vw;
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
@@ -16,37 +17,48 @@
 
 
 .title-container{
-    width: 60vw;
+    width: 80vw;
     display: flex;
     justify-content: space-between;
     text-align: center;
 }
 
 
-.progress-Numbers{
-    margin-top: 20px;
-    border: 1px solid black;
+.progress-Numbers {
+    background-color: white;
+    color: black;
+    border: 1px solid #ccc;
+    height: 40px;
+    width: 40px;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     border-radius: 50%;
-    height: 50px;
-    width: 50px;
-    text-align: center;
-    
-}
+  }
+  
+  .progress-Numbers.active {
+    background-color: #0a1f94;
+    color: white;
+  }
+  
+  .progress-Numbers.completed {
+    background-color: #0f940a;
+    color: white;
+  }
+  
 
 .progress-bar{
     margin-top: 15px;
-    height: 15px;
+    height: 8px;
     background-color: silver;
     border-radius: 20px;
-    width: 60vw;
+    width: 80vw;
     border: 0;
 }
 
 .progress-bar-completed{
-    height: 15px;
+    height: 8px;
     border-radius: 20px;
     transition: width 0.5s ease-in-out;
+    background-color: #0a1f94;
 }
